objects/Scribe_Scoping_Document__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Additional information or comments related to the scoping document or SOW</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>The date on which the scoping document or SOW is generated</description>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Scoping Document</fullName>
                    <default>true</default>
                    <label>Scoping Document</label>
                </value>
                <value>
                    <fullName>Statement of Work</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scoping_Document_Version_Number__c</fullName>
        <description>The version number of the scoping document or SOW sent to the customer</description>
        <label>Scoping Document Version Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scribe_Integration__c</fullName>
        <description>The Scribe_Integration__c record to which the Scribe_Scoping_Document__c is related</description>
        <label>Scribe Integration</label>
        <referenceTo>Scribe_Integration__c</referenceTo>
        <relationshipLabel>Scoping Documents</relationshipLabel>
        <relationshipName>Scribe_Scoping_Documents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <description>Tracks scoping documents and SOWs for Scribe (Integration Hub) projects that are sent to customers.</description>
    <label>Scribe Scoping Document</label>
    <nameField>
        <label>Scoping Doc Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scribe Scoping Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>